Configuration-for-Virtual-Machines/vm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-vm-service
  namespace: vm-networking-lab
spec:
  selector:
    kubevirt.io/vm: basic-vm
  ports:
  - port: 22
    targetPort: 22
    protocol: TCP
    name: ssh
  type: ClusterIP
